--- a/app/src/main/res/layout/activity_leader_set_up.xml
+++ b/app/src/main/res/layout/activity_leader_set_up.xml
@@ -6,7 +6,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="demo.la.battlehack.com.activities.LeaderSetUpActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/app_icon"
+        android:layout_centerInParent="true"
+        android:id="@+id/image"/>
+
+    <TextView android:text="Waiting for buddy info..." android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/image"
+        android:textSize="20sp"
+        android:paddingBottom="10dp"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
