--- a/app/src/main/res/layout/activity_leader.xml
+++ b/app/src/main/res/layout/activity_leader.xml
@@ -2,5 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    
+    <Button
+        android:id="@+id/startStopButton"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:text="Start Run"/>
 </RelativeLayout>
