--- a/app/src/main/res/layout/activity_leader.xml
+++ b/app/src/main/res/layout/activity_leader.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/startStopButton"
+        android:id="@+id/stopButton"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="Start Run"/>
+        android:text="Stop Run"/>
 </RelativeLayout>
