--- a/app/src/main/res/menu/menu_leader_set_up.xml
+++ b/app/src/main/res/menu/menu_leader_set_up.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="demo.la.battlehack.com.activities.LeaderSetUpActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_camera" android:title="Camera"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
