--- a/app/src/main/res/layout/activity_leader.xml
+++ b/app/src/main/res/layout/activity_leader.xml
@@ -2,9 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/durationTextView"
+        android:layout_width="fill_parent"
+        android:layout_height="128dp"
+        android:layout_marginTop="64dp"
+        android:textSize="64dp"
+        android:text="0 sec"
+        android:gravity="center"/>
+
     <Button
         android:id="@+id/stopButton"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="Stop Run"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:padding="20dp"
+        android:paddingTop="24dp"
+        android:paddingBottom="24dp"
+        android:text="Stop Run"
+        android:textSize="32sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/durationTextView"/>
 </RelativeLayout>
